Update index.html, .gitignore, SUCCESS.html, and success.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <title>P-Ticket</title>
+    <link rel="shortcut icon" href="/images/PTLOGO.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css"/>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;800&display=swap"
