Remove unused SVG files and update styles.css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </nav>
           <button class="bus-parent">
             <b class="bus">Bus</b>
-            <img class="bus-icon" alt="" src="./public/busicon.svg" />
+            <img class="bus-icon" alt="" src="/images/bus-icon.png" />
           </button>
         </div>
       </header>
@@ -43,7 +43,7 @@
               <img
                 class="frame-child"
                 alt=""
-                src="./public/rectangle-3@2x.png"
+                src="/images/banner.png"
               />
 
               <h1 class="end-to-end-travel-with-container">
@@ -74,7 +74,7 @@
                   class="people-icon"
                   loading="lazy"
                   alt=""
-                  src="./public/people.svg"
+                  src="/images/people.png"
                 />
               </div>
               <div class="lacks-tickets-label">
@@ -89,7 +89,7 @@
                   class="ticket-cupon-icon"
                   loading="lazy"
                   alt=""
-                  src="./public/ticketcupon.svg"
+                  src="/images/ticket-cupon.png"
                 />
               </div>
               <div class="lacks-parent">
@@ -104,7 +104,7 @@
                   class="stoppage-icon"
                   loading="lazy"
                   alt=""
-                  src="./public/stoppage.svg"
+                  src="/images/stoppage.png"
                 />
               </div>
               <div class="k-parent">
@@ -126,7 +126,7 @@
                 class="group-icon"
                 loading="lazy"
                 alt=""
-                src="./public/group-115.svg"
+                src="/images/group-115.svg"
               />
 
               <div class="off-on-your-container">
@@ -172,13 +172,13 @@
                 class="cupon-devider-icon"
                 loading="lazy"
                 alt=""
-                src="./public/cupondevider.svg"
+                src="/images/cupon-devider.png"
               />
 
               <div class="couple-20-coupon-code-wrapper">
                 <div class="couple-20-coupon-container">
                   <p class="couple-20">
-                    <b>Couple 20</b>
+                    <b>Couple20</b>
                   </p>
                   <p class="coupon-code1">Coupon Code</p>
                 </div>
@@ -219,11 +219,11 @@
                           class="bus-logo-icon"
                           loading="lazy"
                           alt=""
-                          src="./public/buslogo.svg"
+                          src="/images/bus-logo.png"
                         />
                       </div>
-                      <div class="greenline-paribahan-parent">
-                        <h2 class="greenline-paribahan">Greenline Paribahan</h2>
+                      <div class="ena-paribahan-parent">
+                        <h3 class="ena-paribahan">ENA Paribahan</h3>
                         <div class="coach-009-web-ac-business-wrapper">
                           <div class="coach-009-web-ac-business">
                             Coach-009-WEB ! AC_Business
@@ -237,7 +237,7 @@
                         <img
                           class="seat-green-icon"
                           alt=""
-                          src="./public/seatgreen.svg"
+                          src="/images/seat-green.png"
                         />
 
                         <div class="seats-left-wrapper">
@@ -284,7 +284,7 @@
                   class="info-devider-icon"
                   loading="lazy"
                   alt=""
-                  src="./public/infodevider.svg"
+                  src="/images/info-devider.png"
                 />
 
                 <div class="frame-wrapper4">
@@ -294,7 +294,7 @@
                         class="fare-icon"
                         loading="lazy"
                         alt=""
-                        src="./public/fare.svg"
+                        src="/images/fare.png"
                       />
                     </div>
                     <div class="taka-per-seat-container">
@@ -321,7 +321,7 @@
                         class="frame-child9"
                         loading="lazy"
                         alt=""
-                        src="./public/group-31.svg"
+                        src="/images/seat-gray.png"
                       />
 
                       <div class="available-wrapper">
@@ -333,7 +333,7 @@
                         class="seat-green-fill-icon"
                         loading="lazy"
                         alt=""
-                        src="./public/seatgreenfill.svg"
+                        src="/images/seat-green.png"
                       />
 
                       <div class="selected-wrapper">
@@ -345,7 +345,7 @@
                 </div>
                 <button class="rectangle-parent8">
                   <div class="frame-child11"></div>
-                  <img class="wheel-icon" alt="" src="./public/wheel.svg" />
+                  <img class="wheel-icon" alt="" src="/images/wheel.png" />
                 </button>
                 <div class="nested-components-parent">
                   <div class="nested-components">
@@ -696,7 +696,7 @@
                 class="app-instructions-child"
                 loading="lazy"
                 alt=""
-                src="./public/group-104.svg"
+                src="/images/google-play.png"
               />
             </div>
           </div>
