Add input validation for passenger name and number in index.html and script.js

--- a/index.html
+++ b/index.html
@@ -642,6 +642,7 @@
                       class="enter-your-name"
                       placeholder="Enter your name"
                       type="text"
+                      id="passengerName"
                     />
                   </div>
                 </div>
@@ -653,6 +654,7 @@
                       class="enter-your-phone"
                       placeholder="Enter your phone number"
                       type="text"
+                      id="passengerNumber"
                     />
                   </div>
                 </div>
@@ -667,8 +669,8 @@
                     />
                   </div>
                 </div>
-                <button class="privacy-policy">
-                  <div class="next">Next</div>
+                <button class="privacy-policy" onclick="enableNextButton()" id="nextButton" >
+                  <div class="next" >Next</div>
                 </button>
                 <div class="terms-and-conditions-cancellat-wrapper">
                   <div class="terms-and-conditions-cancellat">
